--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <script>
-            function myFunction() {
-                document.getElementById("demo").innerHTML = "Paragraph changed";
-            }
-        </script>
-    </head>
-    <body>
-        <h2>Demo JavaScript in Head</h2>
-        <p id="demo">A Paragraph</p>
-        <button type ="button" onclick="myFunction()">Try it</button>
-    </body>
+	<head>
+		<script>
+			function myFunction() {
+				document.getElementById('demo').innerHTML = 'Paragraph changed'
+			}
+		</script>
+	</head>
+	<body>
+		<h2>Demo JavaScript in Head</h2>
+		<p id="demo">A Paragraph</p>
+		<button type="button" onclick="myFunction()">Try it</button>
+	</body>
 </html>
 
-
-
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body>
+	<body>
+		<h2>Demo JavaScript in Body</h2>
 
-        <h2>Demo JavaScript in Body</h2>
+		<p id="demo">A Paragraph</p>
 
-        <p id="demo">A Paragraph</p>
+		<button type="button" onclick="myFunction()">Try it</button>
 
-        <button type="button" onclick="myFunction()">Try it</button>
-
-        <script>
-            function myFunction() {
-            document.getElementById("demo").innerHTML = "Paragraph changed.";
-            }
-        </script>
-
-    </body>
+		<script>
+			function myFunction() {
+				document.getElementById('demo').innerHTML = 'Paragraph changed.'
+			}
+		</script>
+	</body>
 </html>
